# CoupledCells

./: .gitignore  CMakeLists.txt  Doxyfile.in  Makefile  Makefile.bgl  Makefile.bgp  README.md
CMake/: FindSUNDIALS.cmake
bfrc/autoScripts/: autorc  c.coupledCells  coupledCells.auto  coupledCells.f90
bfrc/autoScripts/coupledCells/: c.coupledCells  coupledCells.auto  coupledCells.f90
bfrc/autoScripts/coupledCells4/: autorc  c.coupledCells4  coupledCells4.auto  coupledCells4.f90
bfrc/autoScripts/coupledCellsLemon/: autorc  c.coupledCellsLemon  coupledCellsLemon.auto  coupledCellsLemon.f90
bfrc/matlabCode/: Coupled2CellsODE.m  CoupledCellsODE.m  doCoupled2CellsODE.m  doCoupled2CellsODEbifurcation.m  doCoupledCellsODE.m  doCoupledCellsODEbifurcation.m
build-sundials/tests/c256f/: c256f_4x64_fitzroy.ll  c256f_8x32_fitzroy.ll  c256f_fitzroy.ll  c256f_fitzroy.ll~
code/: .cproject  .project  Makefile  checkpoint.cpp  compute.cpp  computelib.h  debug_file.cpp  logfile0.txt  logfile1.txt  logfile10.txt  logfile100.txt  logfile101.txt  logfile102.txt  logfile103.txt  logfile104.txt  logfile105.txt  logfile106.txt  logfile107.txt  logfile108.txt  logfile109.txt  logfile11.txt  logfile110.txt  logfile111.txt  logfile112.txt  logfile113.txt  logfile114.txt  logfile115.txt  logfile116.txt  logfile117.txt  logfile118.txt  logfile119.txt  logfile12.txt  logfile120.txt  logfile121.txt  logfile122.txt  logfile123.txt  logfile124.txt  logfile125.txt  logfile126.txt  logfile127.txt  (+132 more)
contrib/: CMakeLists.txt  rksuite.cpp
data/216cores/: clean.sh  exp_216.001.ll
data/216cores/files/: configuration_info.txt  left_daughter_cells.txt  left_daughter_ec_centeroid_points.txt  left_daughter_ec_mesh_points.txt  left_daughter_points.txt  left_daughter_smc_mesh_cells.txt  left_daughter_smc_mesh_points.txt  parent_atp.txt  parent_ec_centeroid_cells.txt  parent_ec_centeroid_points.txt  parent_ec_mesh_points.txt  parent_points.txt  parent_smc_mesh_points.txt  right_daughter_ec_centeroid_points.txt  right_daughter_ec_mesh_cells.txt  right_daughter_ec_mesh_points.txt  right_daughter_jplc.txt  right_daughter_points.txt  right_daughter_smc_mesh_points.txt
doc/doxygen/: Doxyfile.in  Mainpage.dox
doc/sphinx/: conf.py.in  index.rst  overview.rst  parameters.rst  profiling.rst
profiling/c1/2016-May-06/: pprof.txt
profiling/c256f/2016-May-09/: pprof.txt
src/: Makefile  bgq_specific.cpp  bgq_specific.h  checkpoint.cpp  compute.cpp  computelib.h  debug_file.cpp  debug_helpers.cpp  file_io.cpp  gather.cpp  gather.h  gmon.sum  koenigsberger_constants.h  koenigsberger_macros.h  koenigsberger_model.cpp  koenigsberger_model.h  ll.ll  macros.h  main.cpp  read_data.cpp  simulation_main.cpp  solver_arkcode.cpp  solver_arkode.cpp  solver_cvode.cpp  solver_odeint.cpp  solver_rk.cpp  time_profiling.cpp  topology.cpp  tsoukias_constants.h  tsoukias_model.cpp  tsoukias_model.h  tsoukias_smc_multicell.cpp  update.cpp  writeHDF5.cpp  writeHDF5.h
src/output/: ll.ll
src1/: comm_split_v1.cpp  comm_split_v2.cpp  ll.ll  test
src1/examples/: eg_cart_sub.cpp
src1/examples/C/: Makefile  README  comm_split_example.c  group_example.c  test
surface meshes/: README.txt
surface meshes/110/files/: left_daughter_atp.h5  parent_atp.h5  right_daughter_atp.h5
surface meshes/110/vtk/: ec_mesh_left_daughter.vtp  ec_mesh_parent.vtp  ec_mesh_right_daughter.vtp  left_daughter.vtp  parent.vtp  right_daughter.vtp
surface meshes/50/files/: left_daughter_atp.h5  parent_atp.h5  right_daughter_atp.h5
surface meshes/50/vtk/: ec_mesh_left_daughter.vtp  ec_mesh_parent.vtp  ec_mesh_right_daughter.vtp  left_daughter.vtp  parent.vtp  right_daughter.vtp
surface meshes/80/files/: left_daughter_atp.h5  parent_atp.h5  right_daughter_atp.h5
surface meshes/80/vtk/: ec_mesh_left_daughter.vtp  ec_mesh_parent.vtp  ec_mesh_right_daughter.vtp  left_daughter.vtp  parent.vtp  right_daughter.vtp
tests/: CMakeLists.txt
tests/c1/: CMakeLists.txt  c1_bgp.ll.in  c1_compare_results.sh.in  c1_fitzroy.ll.in  c1_fitzroy_16th.ll.in  c1_fitzroy_2th.ll.in  c1_fitzroy_32th.ll.in  c1_fitzroy_4th.ll.in  c1_fitzroy_8th.ll.in  config.txt
tests/c1/files/: parent_atp.h5  parent_atp.txt
tests/c1008/: CMakeLists.txt  c1008_16x64_fitzroy.ll.in  c1008_4x64_fitzroy.ll.in  c1008_8x32_fitzroy.ll.in  c1008_bgp.ll.in  config.txt
tests/c1008/files/: left_daughter_atp.h5  left_daughter_atp.txt  parent_atp.h5  parent_atp.txt  right_daughter_atp.h5  right_daughter_atp.txt
tests/c216/: CMakeLists.txt  config.txt
tests/c216/files/: left_daughter_atp.h5  left_daughter_atp.txt  parent_atp.h5  parent_atp.txt  right_daughter_atp.h5  right_daughter_atp.txt
tests/c256f/: CMakeLists.txt  c256f_4x64_fitzroy.ll.in  c256f_8x32_fitzroy.ll.in  c256f_bgp.ll.in  c256f_compare_results.sh.in  c256f_create_slog2.sh.in  config.txt
tests/c256f/files/: parent_atp.h5  parent_atp.txt
tests/c32/: CMakeLists.txt  c32_bgp.ll.in  c32_compare_results.sh.in  c32_fitzroy.ll.in  config.txt
tests/c32/files/: parent_atp.txt
tests/c32_4procs/: CMakeLists.txt  c32_4procs_fitzroy.ll.in  config.txt
tests/c32_4procs/files/: parent_atp.h5
tests/c32_4procs/profiling_results/: README.md
tests/c480/: CMakeLists.txt  c480_15x32_fitzroy.ll.in  c480_4x64_fitzroy.ll.in  c480_8x32_fitzroy.ll.in  c480_bgp.ll.in  c480_fitzroy.ll.in  config.txt
tests/c480/files/: parent_atp.h5  parent_atp.txt
util/: BlendHDF5JPLC.py  CompareTimeSteps.py  JPLC_Params.py  PlotJPLC.py  WriteAnimation.py  agonist_HDF5ToVTP.py  bifurcation_ec_hdf5ToVTU.py  bifurcation_jplc_hdf5ToVTU.py  bifurcation_smc_hdf5ToVTU.py  ec_hdf5ToVTP.py  ec_hdf5ToVTU.py  genCommands-p7.py  genCommands.py  hdf5ToVTU.py  jplc_hdf5ToVTP.py  jplc_hdf5ToVTU.py  organiseData.py  plot.py  plot_species.py  plot_times.py  polygonsToQuads.py  polygons_to_quads.py  smc_hd5ToVTP.py  smc_hd5ToVTU.py  trunk_ec_hdf5ToVTU.py  trunk_jplc_hdf5ToVTU.py  trunk_smc_hdf5ToVTU.py
